@@ -18,10 +18,15 @@ if {[lsearch [namespace children] ::tcltest] == -1} {
 
 package require tls
 
-# This version of the test is correct for RSA BSAFE SSL-C only.
-# An equivalent test for the OpenSSL version is later in this file.
+# One of these should == 1, depending on what type of ssl library
+# tls was compiled against. (RSA BSAFE SSL-C or OpenSSL).
+#
+set ::tcltest::testConstraints(rsabsafe) 1
+set ::tcltest::testConstraints(openssl) 0
 
-test ciphers-1.1 {Tls::ciphers for ssl3.} {} {
+test ciphers-1.1 {Tls::ciphers for ssl3} {rsabsafe} {
+    # This will fail if you compiled against OpenSSL.
+    # Change the constraint setting above.
     set result [join [eval tls::ciphers ssl3] \n ]
 } {EDH-DSS-RC4-SHA
 EDH-RSA-DES-CBC3-SHA
@@ -42,10 +47,9 @@ EXP-DES-CBC-SHA
 EXP-RC2-CBC-MD5
 EXP-RC4-MD5}
 
-# This version of the test is correct for RSA BSAFE SSL-C only.
-# An equivalent test for the OpenSSL version is later in this file.
-
-test ciphers-1.2 {Tls::ciphers for tls1.} {
+test ciphers-1.2 {Tls::ciphers for tls1} {rsabsafe} {
+    # This will fail if you compiled against OpenSSL.
+    # Change the constraint setting above.
     set result [join [eval tls::ciphers tls1] \n ]
 } {EDH-DSS-RC4-SHA
 EDH-RSA-DES-CBC3-SHA
@@ -66,10 +70,9 @@ EXP-DES-CBC-SHA
 EXP-RC2-CBC-MD5
 EXP-RC4-MD5}
 
-# This version of the test is correct for OpenSSL only.
-# An equivalent test for the RSA BSAFE SSL-C is earlier in this file.
-
-test ciphers-1.3 {Tls::ciphers for ssl3.} {OpenSSL} {
+test ciphers-1.3 {Tls::ciphers for ssl3} {openssl} {
+    # This will fail if you compiled against RSA bsafe.
+    # Change the constraint setting above.
     set result [join [eval tls::ciphers ssl3] \n ]
 } {EDH-RSA-DES-CBC3-SHA
 EDH-DSS-DES-CBC3-SHA
@@ -88,7 +91,9 @@ EXP-RC4-MD5}
 # This version of the test is correct for OpenSSL only.
 # An equivalent test for the RSA BSAFE SSL-C is earlier in this file.
 
-test ciphers-1.4 {Tls::ciphers for tls1.} {OpenSSL} {
+test ciphers-1.4 {Tls::ciphers for tls1} {openssl} {
+    # This will fail if you compiled against RSA bsafe.
+    # Change the constraint setting in all.tcl
     set result [join [eval tls::ciphers tls1] \n ]
 } {EDH-RSA-DES-CBC3-SHA
 EDH-DSS-DES-CBC3-SHA
